--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,22 @@
+#开启驼峰注解
+mybatis.configuration.map-underscore-to-camel-case=true
+
+#数据库配置 驱动配置信息
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+spring.datasource.test1.url=jdbc:mysql://localhost:3306/bootstudying?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+spring.datasource.test1.username=root
+spring.datasource.test1.password=123456
+spring.datasource.test1.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.test2.url=jdbc:mysql://localhost:3306/datasource?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+spring.datasource.test2.username=root
+spring.datasource.test2.password=123456
+spring.datasource.test2.driver-class-name=com.mysql.jdbc.Driver
+
+#mybatis.config-location=classpath:mybatis/mybatis-config.xml
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+
 com.zlc.name=zlc
 
 spring.thymeleaf.mode = LEGACYHTML5
