--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 
 	<dependencies>
 
+		<!--整合RabbitMQ-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>1.5.2.RELEASE</version>
+		</dependency>
+
 		<!--整合mybatis-->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
