--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.port=8081
+spring.kafka.producer.bootstrap-servers=127.0.0.1:
+
+
+
 #开启驼峰注解
 mybatis.configuration.map-underscore-to-camel-case=true
 
