--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8081
-spring.kafka.producer.bootstrap-servers=127.0.0.1:
+#生产者
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+#消费者
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.group-id=applog
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
+
 
 
 
