--- a/zookeeper/pom.xml
+++ b/zookeeper/pom.xml
@@ -20,6 +20,17 @@
 
     <dependencies>
 
+        <!--curator-framework 客户端-->
+        <!--依赖版本和服务端版本有关系 服务端3.4.6时 用5.0.0时报错:
+            org.apache.zookeeper.KeeperException$UnimplementedException: KeeperErrorCode = Unimplemented -->
+        <!--要把下面的zookeeper依赖注掉-->
+        <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -27,7 +38,7 @@
         </dependency>
 
         <!--原生客户端-->
-        <dependency>
+       <!-- <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>3.4.6</version>
@@ -41,7 +52,7 @@
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
