--- a/zookeeper2/pom.xml
+++ b/zookeeper2/pom.xml
@@ -20,6 +20,12 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
